--- a/request_a_demo.html
+++ b/request_a_demo.html
@@ -41,15 +41,15 @@
     <!-- ===============================================-->
     <main class="main" id="top">
       <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" data-navbar-on-scroll="data-navbar-on-scroll">
-        <div class="container"><a class="navbar-brand" href="/"><img src="assets/img/icons/logo.png" alt="" />&nbsp;</a>
+        <div class="container"><a class="navbar-brand" href="index.html"><img src="assets/img/icons/logo.png" alt="" />&nbsp;</a>
           <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto border-bottom border-lg-bottom-0 pt-2 pt-lg-0">
-              <li class="nav-item"><a class="nav-link" aria-current="page" href="/">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="/teasers.html">More Teasers</a></li>
+              <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="teasers.html">More Teasers</a></li>
             </ul>
             <form class="d-flex py-3 py-lg-0">
-              <a class="btn btn-outline-danger rounded-pill order-0" href="/request_a_demo.html">Request a Demo</a>
+              <a class="btn btn-outline-danger rounded-pill order-0" href="request_a_demo.html">Request a Demo</a>
             </form>
           </div>
         </div>
@@ -79,7 +79,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 col-lg-4 mb-3">
-                <a href="/"><img class="d-inline-block align-middle" src="assets/img/icons/logo.png" alt="" /></a>
+                <a href="index.html"><img class="d-inline-block align-middle" src="assets/img/icons/logo.png" alt="" /></a>
                 <p class="text-400 my-3">&copy; 2021 E-Muhafiz, Made in 🇵🇰</p>
             </div>
           </div>
