--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
     <!-- ===============================================-->
     <!--    Favicons-->
     <!-- ===============================================-->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicons/favicon.ico">
-    <link rel="manifest" href="assets/img/favicons/manifest.json">
-    <meta name="msapplication-TileImage" content="assets/img/favicons/mstile-150x150.png">
     <meta name="theme-color" content="#ffffff">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="E-Muhafiz">
+    <meta property="og:description" content="E-Muhafiz is an AI based solution that automatically read Vehicle number plates and CNIC using CCTV cameras. E-Muhafiz is designed to keep record of vehicles entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc. ">
+    <meta property="og:image" content="https://maxpaynestory.github.io/movie-talk/assets/img/icons/logo.png">
+    <meta property="og:url" content="https://emuhafiz.com/index.html">
+    <meta name="twitter:card" content="https://maxpaynestory.github.io/movie-talk/assets/img/icons/logo.png">
+    <meta property="og:site_name" content="E-Muhafiz">
+    <meta name="twitter:image:alt" content="E-Muhafiz">
 
 
     <!-- ===============================================-->
