typo fixed for twitter tags

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:description" content="E-Muhafiz is an AI based solution that automatically read Vehicle number plates and CNIC using CCTV cameras. E-Muhafiz is designed to keep record of vehicles entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc. ">
     <meta property="og:image" content="https://maxpaynestory.github.io/movie-talk/assets/img/icons/logo.png">
     <meta property="og:url" content="https://emuhafiz.com/index.html">
-    <meta name="twitter:card" content="https://maxpaynestory.github.io/movie-talk/assets/img/icons/logo.png">
+    <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="E-Muhafiz">
     <meta name="twitter:image:alt" content="E-Muhafiz">
 
