--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="theme-color" content="#ffffff">
     <meta property="og:type" content="website">
     <meta property="og:title" content="E-Muhafiz">
-    <meta property="og:description" content="E-Muhafiz is an AI based solution that automatically read Vehicle number plates and CNIC using CCTV cameras. E-Muhafiz is designed to keep record of vehicles entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc. ">
+    <meta name="description" property="og:description" content="E-Muhafiz is an AI based solution that automatically read Vehicle number plates and CNIC using CCTV cameras. E-Muhafiz is designed to keep record of vehicles entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc. ">
     <meta property="og:image" content="https://maxpaynestory.github.io/movie-talk/assets/img/icons/logo.png">
     <meta property="og:url" content="https://emuhafiz.com/index.html">
     <meta name="twitter:card" content="summary_large_image">
