--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'G-1FJP3M3539', 'auto');
+    ga('create', 'UA-36922495-2', 'auto');
     ga('send', 'pageview');
     </script>
     <!-- End Google Analytics -->
