--- a/teasers.html
+++ b/teasers.html
@@ -47,6 +47,7 @@
             <ul class="navbar-nav mx-auto border-bottom border-lg-bottom-0 pt-2 pt-lg-0">
               <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Home</a></li>
               <li class="nav-item"><a class="nav-link active" href="teasers.html">More Teasers</a></li>
+              <li class="nav-item"><a class="nav-link" href="privacy_policy.html">Privacy Policy</a></li>
             </ul>
             <form class="d-flex py-3 py-lg-0">
               <a class="btn btn-outline-danger rounded-pill order-0" href="request_a_demo.html">Request a Demo</a>
