updated privacy policy

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -47,7 +47,7 @@
             <ul class="navbar-nav mx-auto border-bottom border-lg-bottom-0 pt-2 pt-lg-0">
               <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
               <li class="nav-item"><a class="nav-link" href="teasers.html">More Teasers</a></li>
-              <li class="nav-item"><a class="nav-link" aria-current="page" href="privacy_policy.html">Privacy Policy</a></li>
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="privacy_policy.html">Privacy Policy</a></li>
             </ul>
             <form class="d-flex py-3 py-lg-0">
               <a class="btn btn-outline-danger rounded-pill order-0" href="request_a_demo.html">Request a Demo</a>
@@ -66,7 +66,7 @@
             <h1>Privacy Policy</h1>
             <p>Last updated: February 18, 2021</p>
             <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
-            <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the <a href="https://www.privacypolicies.com/privacy-policy-generator/" target="_blank">Privacy Policy Generator</a>.</p>
+            <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy.</p>
             <h1>Interpretation and Definitions</h1>
             <h2>Interpretation</h2>
             <p>The words of which the initial letter is capitalized have meanings defined under the following conditions. The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.</p>
