--- a/teasers.html
+++ b/teasers.html
@@ -30,6 +30,9 @@
     <!-- ===============================================-->
     <link href="assets/css/theme.css" rel="stylesheet" />
     <link href="assets/css/muhafiz.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
   </head>
 
@@ -62,12 +65,30 @@
       <section class="pb-6">
 
         <div class="container">
-          <div class="row">
-            <dv class="col-12">
-              <video id="videoPlayer" controls style="margin: 0 auto; width: 70%; display: block;">
-                Your browser does not support the video tag.
-              </video>
-            </dv>  
+            <div class="row">
+              <div class="col-12">
+                <divv id="myCarousel" class="carousel slide" data-interval="false">
+                  <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <video controls style="margin: 0 auto; width: 70%; display: block;">
+                        <source src="https://github.com/maxpaynestory/movie-talk/releases/download/videos-version-2/e-muhafiz-teaser-02.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                      </video>
+                    </div>
+                    <div class="carousel-item">
+                      <video controls style="margin: 0 auto; width: 70%; display: block;">
+                        <source src="https://github.com/maxpaynestory/movie-talk/releases/download/videos-version-3/e-muhafiz-teaser-05.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                      </video>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div><!-- end of .container-->
 
@@ -103,39 +124,9 @@
     <!-- ===============================================-->
     <!--    JavaScripts-->
     <!-- ===============================================-->
-    <script src="vendors/@popperjs/popper.min.js"></script>
-    <script src="vendors/bootstrap/bootstrap.min.js"></script>
     <script src="vendors/is/is.min.js"></script>
     <script src="//polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
     <script src="assets/js/theme.js"></script>
-    <script>
-      let videoSource = new Array();
-      videoSource[0] = 'https://github.com/maxpaynestory/movie-talk/releases/download/videos-version-2/e-muhafiz-teaser-02.mp4';
-      videoSource[1] = 'https://github.com/maxpaynestory/movie-talk/releases/download/videos-version-3/e-muhafiz-teaser-05.mp4';
-      let i = 0; // global
-      const videoCount = videoSource.length;
-      const element = document.getElementById("videoPlayer");
-
-      function videoPlay(videoNum) {
-          element.setAttribute("src", videoSource[videoNum]);
-          element.autoplay = true;
-          element.load();
-          element.play();
-      }
-      document.getElementById('videoPlayer').addEventListener('ended', myHandler, false);
-
-      videoPlay(0); // play the video
-
-      function myHandler() {
-          i++;
-          if (i == videoCount) {
-              i = 0;
-              videoPlay(i);
-          } else {
-              videoPlay(i);
-          }
-      }
-    </script>
     <!-- Google Analytics -->
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
