added prev next arrows

--- a/teasers.html
+++ b/teasers.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>E-Muhafiz</title>
+    <title>E-Muhafiz - Video Teasers</title>
 
 
     <!-- ===============================================-->
@@ -65,30 +65,33 @@
       <section class="pb-6">
 
         <div class="container">
-            <div class="row">
-              <div class="col-12">
-                <divv id="myCarousel" class="carousel slide" data-interval="false">
-                  <ol class="carousel-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                  </ol>
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <video controls style="margin: 0 auto; width: 70%; display: block;">
-                        <source src="https://github.com/maxpaynestory/movie-talk/releases/download/videos-version-2/e-muhafiz-teaser-02.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                      </video>
-                    </div>
-                    <div class="carousel-item">
-                      <video controls style="margin: 0 auto; width: 70%; display: block;">
-                        <source src="https://github.com/maxpaynestory/movie-talk/releases/download/videos-version-3/e-muhafiz-teaser-05.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                      </video>
-                    </div>
-                  </div>
-                </div>
+          <div id="myCarousel" class="carousel slide" data-interval="false">
+            <ol class="carousel-indicators">
+              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#myCarousel" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <video controls style="margin: 0 auto; width: 70%; display: block;">
+                  <source src="https://github.com/maxpaynestory/movie-talk/releases/download/videos-version-2/e-muhafiz-teaser-02.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
+              </div>
+              <div class="carousel-item">
+                <video controls style="margin: 0 auto; width: 70%; display: block;">
+                  <source src="https://github.com/maxpaynestory/movie-talk/releases/download/videos-version-3/e-muhafiz-teaser-05.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
               </div>
             </div>
+            <a class="carousel-control-prev-muhafiz" href="#myCarousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next-muhafiz" href="#myCarousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
         </div><!-- end of .container-->
 
