added social tags for sharing video

--- a/teasers.html
+++ b/teasers.html
@@ -11,6 +11,26 @@
     <!--    Document Title-->
     <!-- ===============================================-->
     <title>E-Muhafiz - Video Teasers</title>
+    <!-- Search Engine -->
+    <meta name="description" content="E-Muhafiz is an AI based car parking system for Pakistan which supports integrated Plate Recognition (LPR).">
+    <meta name="image" content="https://emuhafiz.com/assets/img/logo_social.png">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="E-Muhafiz - Video Teasers">
+    <meta itemprop="description" content="E-Muhafiz is an AI based car parking system for Pakistan which supports integrated Plate Recognition (LPR).">
+    <meta itemprop="image" content="https://emuhafiz.com/assets/img/logo_social.png">
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="E-Muhafiz - Video Teasers">
+    <meta name="og:description" content="E-Muhafiz is an AI based car parking system for Pakistan which supports integrated Plate Recognition (LPR).">
+    <meta name="og:image" content="https://emuhafiz.com/assets/img/logo.png">
+    <meta name="og:url" content="https://emuhafiz.com">
+    <meta name="og:site_name" content="E-Muhafiz">
+    <meta name="og:locale" content="en_US">
+    <meta name="og:video" content="https://github.com/maxpaynestory/movie-talk/releases/download/videos-version-3/e-muhafiz-teaser-05.mp4">
+    <meta name="og:type" content="video.other">
+    <!-- Open Graph - Video -->
+    <meta name="video:height" content="480">
+    <meta name="video:width" content="640">
+    <meta name="video:type" content="video/mp4">
 
 
     <!-- ===============================================-->
