hoping to see linkedin getting video post

--- a/teasers.html
+++ b/teasers.html
@@ -26,7 +26,7 @@
     <meta name="og:site_name" content="E-Muhafiz">
     <meta name="og:locale" content="en_US">
     <meta name="og:video" content="https://github.com/maxpaynestory/movie-talk/releases/download/videos-version-3/e-muhafiz-teaser-05.mp4">
-    <meta name="og:type" content="video.other">
+    <meta name="og:type" content="video.movie">
     <!-- Open Graph - Video -->
     <meta name="video:height" content="480">
     <meta name="video:width" content="640">
