--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- ===============================================-->
   <!--    Document Title-->
   <!-- ===============================================-->
-  <title>E-Muhafiz - Car Number Plate Recognition System - ANPR</title>
+  <title>E-Muhafiz - Car Number Plate Recognition - camera security</title>
 
 
   <!-- ===============================================-->
@@ -20,7 +20,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="E-Muhafiz">
   <meta name="description" property="og:description"
-    content="E-Muhafiz is an AI based solution that automatically read Vehicle number plates and CNIC using CCTV cameras. E-Muhafiz is designed to keep record of vehicles entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc. ">
+    content="E-Muhafiz is an automatic AI based solution that read Car number plates and CNIC using security cameras. E-Muhafiz is designed to keep record of cars entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc. ">
   <meta property="og:image" content="https://emuhafiz.com/assets/img/logo_social.png">
   <meta property="og:url" content="https://emuhafiz.com/index.html">
   <meta name="twitter:card" content="summary_large_image">
@@ -30,7 +30,7 @@
   <meta name="twitter:image" content="https://emuhafiz.com/assets/img/logo_social.png">
   <meta property="og:site_name" content="E-Muhafiz">
   <meta name="twitter:image:alt" content="E-Muhafiz">
-  <meta name="keywords" content=" Number Plate Recognition, Automatic Number Plate Recognition, ANPR" />
+  <meta name="keywords" content="Car Plate Recognition, Automatic Number Plate Recognition, automatic camera security" />
 
 
   <!-- ===============================================-->
