--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- ===============================================-->
   <!--    Document Title-->
   <!-- ===============================================-->
-  <title>E-Muhafiz - Car Number Plate Recognition - camera security</title>
+  <title>E-Muhafiz - car number plate recognition - camera security</title>
 
 
   <!-- ===============================================-->
@@ -20,13 +20,13 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="E-Muhafiz">
   <meta name="description" property="og:description"
-    content="E-Muhafiz is an automatic AI based solution that read Car number plates and CNIC using security cameras. E-Muhafiz is designed to keep record of cars entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc. ">
+    content="E-Muhafiz is an automatic AI based solution that read Car number plate and CNIC using security cameras. E-Muhafiz is designed to keep record of cars entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc. ">
   <meta property="og:image" content="https://emuhafiz.com/assets/img/logo_social.png">
   <meta property="og:url" content="https://emuhafiz.com/index.html">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="E-Muhafiz">
   <meta name="twitter:description"
-    content="E-Muhafiz is an AI based solution that automatically read Vehicle number plates and CNIC using CCTV cameras. E-Muhafiz is designed to keep record of vehicles entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc.">
+    content="E-Muhafiz is an AI based solution that automatically read Vehicle number plate and CNIC using CCTV cameras. E-Muhafiz is designed to keep record of vehicles entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc.">
   <meta name="twitter:image" content="https://emuhafiz.com/assets/img/logo_social.png">
   <meta property="og:site_name" content="E-Muhafiz">
   <meta name="twitter:image:alt" content="E-Muhafiz">
@@ -77,7 +77,7 @@
           <h1>Car Number Plate Recognition System</h1>
           <p style="text-align: justify;">
             <b>Automatic Number Plate Recognition (ANPR)</b> is the ability to automatically recognize the symbols
-            contained in the number plates of a motor vehicle when read from an image provided by video surveillance
+            contained in the number plate of a motor vehicle when read from an image provided by video surveillance
             cameras for the purposes of further processing by a security system.&nbsp;
           </p>
         </dv>
