--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <meta name="theme-color" content="#ffffff">
   <meta property="og:type" content="website">
   <meta property="og:title" content="E-Muhafiz">
+  <meta property="og:description" content="E-Muhafiz is an automatic AI based solution that read Car number plate and CNIC using camera security. E-Muhafiz is designed to keep record of cars entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc. ">
   <meta name="description" content="E-Muhafiz is an automatic AI based solution that read Car number plate and CNIC using camera security. E-Muhafiz is designed to keep record of cars entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc. ">
   <meta property="og:image" content="https://emuhafiz.com/assets/img/logo_social.png">
   <meta property="og:url" content="https://emuhafiz.com/index.html">
