trying another title for social sharing

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     <!-- ===============================================-->
     <meta name="theme-color" content="#ffffff">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="E-Muhafiz - car number plate recognition - camera security">
+    <meta property="og:title" content="Car number plate recognition - Camera security">
     <meta property="og:description" content="E-Muhafiz is an automatic AI based solution that read Car number plate and CNIC using camera security. E-Muhafiz is designed to keep record of cars entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc. ">
     <meta name="description" content="E-Muhafiz is an automatic AI based solution that read Car number plate and CNIC using camera security. E-Muhafiz is designed to keep record of cars entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc. ">
     <meta property="og:image" content="https://emuhafiz.com/assets/img/logo_social.png">
     <meta property="og:url" content="https://emuhafiz.com/index.html">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="E-Muhafiz - car number plate recognition - camera security">
+    <meta name="twitter:title" content="Car number plate recognition - Camera security">
     <meta name="twitter:description" content="E-Muhafiz is an AI based solution that automatically read Vehicle number plate and CNIC using CCTV cameras. E-Muhafiz is designed to keep record of vehicles entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc.">
     <meta name="twitter:image" content="https://emuhafiz.com/assets/img/logo_social.png">
-    <meta property="og:site_name" content="E-Muhafiz - car number plate recognition - camera security">
-    <meta name="twitter:image:alt" content="E-Muhafiz - car number plate recognition - camera security">
+    <meta property="og:site_name" content="Car number plate recognition - Camera security">
+    <meta name="twitter:image:alt" content="Car number plate recognition - Camera security">
     <meta name="keywords" content="Car Plate Recognition, Automatic Number Plate Recognition, automatic camera security" />
 
 
