--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>E-Muhafiz - car number plate recognition - camera security</title>
+    <title>Car number plate recognition - camera security</title>
 
 
     <!-- ===============================================-->
