another suitable title

--- a/teasers.html
+++ b/teasers.html
@@ -10,23 +10,23 @@
   <!-- ===============================================-->
   <!--    Document Title-->
   <!-- ===============================================-->
-  <title>E-Muhafiz - Video Teasers</title>
+  <title>number plate reading software | vehicle entry/exit software  | E-Muhafiz</title>
   <!-- Search Engine -->
   <meta name="description"
     content="E-Muhafiz is an AI based car parking system for Pakistan which supports integrated Plate Recognition (LPR).">
   <meta name="image" content="https://emuhafiz.com/assets/img/logo_social.png">
   <!-- Schema.org for Google -->
-  <meta itemprop="name" content="E-Muhafiz - Video Teasers">
+  <meta itemprop="name" content="number plate reading software | vehicle entry/exit software  | E-Muhafiz">
   <meta itemprop="description"
     content="E-Muhafiz is an AI based car parking system for Pakistan which supports integrated Plate Recognition (LPR).">
   <meta itemprop="image" content="https://emuhafiz.com/assets/img/logo_social.png">
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-  <meta name="og:title" content="E-Muhafiz - Video Teasers">
+  <meta name="og:title" content="number plate reading software | vehicle entry/exit software  | E-Muhafiz">
   <meta name="og:description"
     content="E-Muhafiz is an AI based car parking system for Pakistan which supports integrated Plate Recognition (LPR).">
   <meta name="og:image" content="https://emuhafiz.com/assets/img/logo.png">
   <meta name="og:url" content="https://emuhafiz.com">
-  <meta name="og:site_name" content="E-Muhafiz">
+  <meta name="og:site_name" content="number plate reading software | vehicle entry/exit software  | E-Muhafiz">
   <meta name="og:locale" content="en_US">
   <meta name="og:video"
     content="https://github.com/maxpaynestory/movie-talk/releases/download/videos-version-3/e-muhafiz-teaser-05.mp4">
