placed whatsapp button on teasers

--- a/teasers.html
+++ b/teasers.html
@@ -131,6 +131,12 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
+        <div class="row">
+          <dv class="col text-center" style="padding: 20px;">
+            <a class="btn btn-sm btn-danger hover-top btn-glow text-end btn-green"
+               href="https://api.whatsapp.com/send?phone=923040916691">WHATSAPP</a>
+          </dv>
+        </div>
       </div><!-- end of .container-->
 
     </section>
