more fixed to navigation

--- a/request_a_demo.html
+++ b/request_a_demo.html
@@ -57,7 +57,7 @@
             <li class="nav-item"><a class="nav-link" href="privacy_policy.html">Privacy Policy</a></li>
           </ul>
           <form class="d-flex py-3 py-lg-0">
-            <a class="btn btn-outline-danger rounded-pill order-0 active" href="request_a_demo.html">Request a
+            <a class="btn btn-outline-danger rounded-pill order-0" href="request_a_demo.html">Request a
               Demo</a>
           </form>
         </div>
